--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/jay.jpg" />
   
-        <link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
 <link
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
